--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="">
 
+    <link rel="stylesheet" href="style.css">
+    <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="stylesheet" href="customscrollbar.css">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <style>
         html,
         body {
@@ -31,22 +37,132 @@
 
         .leftSide {
             grid-area: leftSide;
-            width: 260px;
+
+            overflow: hidden;
+            /* width: 260px; */
             border-right: 1px solid rgb(217, 217, 217);
         }
 
         .content {
             padding: 10px;
         }
+
+        .sidebar-content {}
     </style>
 </head>
 
 <body>
     <section class="layout">
         <div class="header"></div>
-        <div class="leftSide"></div>
+        <div class="leftSide">
+            <div class="sidebar open">
+                <div class="logo-details">
+                    <i class='bx bx-bot icon'></i>
+                    <div class="logo_name">Sidebar</div>
+                    <i class='bx bx-menu' id="btn"></i>
+                </div>
+                <div id="sidebar-content" class="custom-scrollbar"
+                    style="overflow-y: auto; height: calc(100% - 120px);">
+                    <ul class="nav-list">
+                        <li>
+                            <a href="#">
+                                <i class='bx bx-grid-alt'></i>
+                                <span class="links_name">Dashboard</span>
+                            </a>
+                            <span class="tooltip">Dashboard</span>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <i class='bx bx-user'></i>
+                                <span class="links_name">User</span>
+                            </a>
+                            <span class="tooltip">User</span>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <i class='bx bx-chat'></i>
+                                <span class="links_name">Messages</span>
+                            </a>
+                            <span class="tooltip">Messages</span>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <i class='bx bx-pie-chart-alt-2'></i>
+                                <span class="links_name">Analytics</span>
+                            </a>
+                            <span class="tooltip">Analytics</span>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <i class='bx bx-folder'></i>
+                                <span class="links_name">File Manager</span>
+                            </a>
+                            <span class="tooltip">Files</span>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <i class='bx bx-cart-alt'></i>
+                                <span class="links_name">Order</span>
+                            </a>
+                            <span class="tooltip">Order</span>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <i class='bx bx-heart'></i>
+                                <span class="links_name">Saved</span>
+                            </a>
+                            <span class="tooltip">Saved</span>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <i class='bx bx-cog'></i>
+                                <span class="links_name">Setting</span>
+                            </a>
+                            <span class="tooltip">Setting</span>
+                        </li>
+                    </ul>
+                </div>
+                <ul>
+                    <li class="profile">
+                        <div class="profile-details">
+                            <!-- <img src="profile-picture.jpg" alt="profileImg"> -->
+                            <div class="name_job">
+                                <div class="name">Your Name</div>
+                                <div class="job">Application User</div>
+                            </div>
+                        </div>
+                        <i class='bx bx-log-out' id="log_out"></i>
+                    </li>
+                </ul>
+            </div>
+        </div>
         <div class="content"></div>
     </section>
+
+    <script>
+        let sidebar = document.querySelector(".sidebar");
+        let closeBtn = document.querySelector("#btn");
+
+        const sidebarContent = document.querySelector("#sidebar-content");
+
+        console.log('sidebarcontent', sidebarContent)
+
+        closeBtn.addEventListener("click", () => {
+            sidebar.classList.toggle("open");
+            menuBtnChange();
+        });
+
+        function menuBtnChange() {
+            if (sidebar.classList.contains("open")) {
+                closeBtn.classList.replace("bx-menu", "bx-menu-alt-right");
+                sidebarContent.classList.toggle("custom-scrollbar-hidden");
+
+            } else {
+                closeBtn.classList.replace("bx-menu-alt-right", "bx-menu");
+                sidebarContent.classList.toggle("custom-scrollbar-hidden");
+            }
+        }
+    </script>
 </body>
 
 </html>
